Fix user image overflowing in groups

--- a/app/static/css/group.css
+++ b/app/static/css/group.css
@@ -84,6 +84,8 @@ a:hover {
 .avatar img {
     display: block;
     margin: 0 auto;
+    width: 100%;
+    height: 100%;
 }
 
 .user-title {
